# tauri-km

./: .gitignore  AGENTS.md  README  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
.github/: copilot-instructions.md
.github/agents/: harness.agent.md
.github/prompts/: code-review.prompt.md  data-sync.prompt.md  error-diagnosis.prompt.md
.github/skills/amazon/: SKILL.md
.github/skills/harness-boundary/: SKILL.md
.github/skills/react-frontend/: SKILL.md
.github/skills/shopify/: SKILL.md
.github/skills/shopify-expert/: SKILL.md
.github/skills/tauri-rust/: SKILL.md
patches/: source-map@0.7.4.patch
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: amazon_mod.rs  common_mod.rs  log_mod.rs  mod.rs  other_model.rs  shopify_mod.rs
src/components/: AwaitComponent.tsx
src/hooks/: index.ts
src/hooks/modules/: useCacheValue.ts  useDebounceEffect.tsx  useStateExtend.tsx
src/layout/: index.tsx
src/layout/KeepAliveModules/: KeepAliveRoot.tsx  index.ts  keepAlive.tsx
src/layout/modules/: ErrorComponent.tsx  LayoutRoot.tsx  Loading.tsx  NoFindPage.tsx
src/pages/Home/: index.tsx
src/router/: index.ts  index.type.ts
src/router/hooks/: useRouter.tsx
src/router/modules/: customRouter.tsx
src/store/: index.tsx
src/store/modules/: config.ts
src/types/: tauri.d.ts  vite-env.d.ts
src/utils/: index.ts
src/utils/modules/: auto_reset_fetch.ts  confirm.tsx  viewport.ts  (+3 more)
(+33 files in other folders)
