[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
headless_chrome = "1.0.10"
base64 = "0.22.1"
tokio = "1.42.0"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
template-matching = { version = "0.2.0", features = ["image"] }
futures = "0.3.31"
image = "0.25.5"
reqwest = { version = "0.12", features = ["blocking"] }
tauri-plugin-clipboard-manager = "2.2.0"
lazy_static = "1.5.0"
phf = "0.11.2"
